compiler-core/main/build/package_interface/snapshots/gleam_core__build__package_interface__tests__type_aliases.snap
---
source: compiler-core/src_refactored/build/package_interface/tests.rs
assertion_line: 226
expression: pub type Wibble(a) = List(a)
snapshot_kind: text
---
{
  "name": "my_package",
  "version": "11.10.9-1.wibble+build",
  "gleam-version-constraint": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "type-aliases": {
        "Wibble": {
          "documentation": null,
          "deprecation": null,
          "parameters": 1,
          "alias": {
            "kind": "named",
            "name": "List",
            "package": "",
            "module": "gleam",
            "parameters": [
              {
                "kind": "variable",
                "id": 0
              }
            ]
          }
        }
      },
      "types": {},
      "constants": {},
      "functions": {}
    }
  }
}
